[package]
name = "openapi-merge"
version = "1.3.3"
edition = "2021"
authors = ["Robert Massaioli <robertmassaioli@gmail.com>"]
license = "MIT"
description = "A tool to merge numerous OpenAPI files into a single openapi definition."
repository = "github:robertmassaioli/openapi-merge"
homepage = "https://github.com/robertmassaioli/openapi-merge"

[[bin]]
name = "openapi-merge"
path = "src/main.rs"

[lib]
name = "openapi_merge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
jsonschema = "0.17"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
openapiv3 = "1.0"
indexmap = "1.9"

[dev-dependencies]
tempfile = "3.8"

